Subo los responsive

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <section id="ataques">
             <div id="puntos">
                 <p class="puntos-jugadores">PC:<span id="puntos-jugador">0</span></p>
-                <p class="puntos-jugadores">YOU <span id="puntos-enemigo">0</span></p>
+                <p class="puntos-jugadores">TÚ: <span id="puntos-enemigo">0</span></p>
             </div>
             
             <div id="botones">
                 <button onclick="piedra()" class="boton">Piedra</button>
                 <button onclick="papel()" class="boton">Papel</button>
-                <button onclick="tijera()"class="boton">tijera</button>
+                <button onclick="tijera()"class="boton">Tijera</button>
             </div>
         </section>
         <section id="tarjeta">
-            <p id="mensaje">Tu escogiste <span id="eleccion-jugador">piedra</span> y pc escogio <span id="eleccion-enemigo">papel</span> tu <span id="resultado">ganaste</span></p>
+            <p id="mensaje">Tu escogiste <span id="eleccion-jugador"></span> y pc escogio <span id="eleccion-enemigo"></span> tu <span id="resultado">ataques</span></p>
             <div>
                 <button onclick="ok()"id="boton-ok">OK</button>
             </div>
