subo solucion de errores

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@600&family=Poppins:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="6729598.png" type="image/x-icon">
 </head>
 <body>
    
@@ -16,8 +17,8 @@
         <h1>Piedra papel o tijera</h1>
         <section id="ataques">
             <div id="puntos">
-                <p class="puntos-jugadores">PC:<span id="puntos-jugador">0</span></p>
-                <p class="puntos-jugadores">TÚ: <span id="puntos-enemigo">0</span></p>
+                <p class="puntos-jugadores">PC:<span id="puntos-enemigo">0</span></p>
+                <p class="puntos-jugadores">TÚ: <span id="puntos-jugador">0</span></p>
             </div>
             
             <div id="botones">
@@ -27,7 +28,7 @@
             </div>
         </section>
         <section id="tarjeta">
-            <p id="mensaje">Tu escogiste <span id="eleccion-jugador"></span> y pc escogio <span id="eleccion-enemigo"></span> tu <span id="resultado">ataques</span></p>
+            <p id="mensaje">Tu escogiste <span id="eleccion-jugador"></span> y pc escogio <span id="eleccion-enemigo"></span> <span id="resultado">ataques</span></p>
             <div>
                 <button onclick="ok()"id="boton-ok">OK</button>
             </div>
